# CorgiRender

./: .gitattributes  .gitignore  CMakeLists.txt  GenerateVSProject.bat  README.md
Source/: main.cpp
Source/Core/: CoreTypes.h
Source/Core/GenericPlatform/: GenericPlatform.h  GenericPlatformMisc.h  GenericWindow.cpp  GenericWindow.h  PlatformMisc.h
Source/Core/Graphic/: FrameBuffer.h  Image.cpp  Image.h
Source/Core/HAL/: Platform.h
Source/Core/Math/: Color.cpp  Color.h  MathUtility.h
Source/Core/Misc/: AssertionMacros.h  CoreMacrosDefines.h
Source/Core/Windows/: WindowsPlatform.h  WindowsPlatformMisc.cpp  WindowsPlatformMisc.h  WindowsWindow.cpp  WindowsWindow.h
